--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ menu_settings:
 footer_settings:
   logo_image:
   logo_width: 100
-  tagline: A beautiful, minimal portfolio Jekyll theme
+  tagline: Software development tips, tutorials, and unsolicited opinions
 
 hero_settings:
   background_image: /images/backgrounds/background-hero.svg
