--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,10 +8,10 @@ header_settings:
 
 menu_settings:
   menu_items:
-    - title: 'Projects'
-      url: '/'
     - title: 'Blog'
-      url: '/blog/'
+      url: '/blog'
+    - title: 'About'
+      url: '/about'
 
 footer_settings:
   logo_image:
@@ -32,15 +32,15 @@ contact_settings:
   send_button_text: 'Get in Touch'
 
 social_settings:
-  facebook_url: 'https://www.facebook.com/jekyllthemes/'
-  twitter_url: 'https://twitter.com/jekyllthemesio'
-  instagram_url: 'http://instagram.com'
+  facebook_url: ''
+  twitter_url: 'https://twitter.com/scottrobbinsdev'
+  instagram_url: ''
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
   vimeo_url: ''
   pinterest_url: ''
-  medium_url: 'https://medium.com/'
+  medium_url: ''
   quora_url: ''
   amazon_url: ''
   apple_url: ''
@@ -49,7 +49,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: 'https://github.com/'
+  github_url: 'https://github.com/ScottRobbins'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
