--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,6 +25,7 @@ post_settings:
   grid_spacing: 10
 
 contact_settings:
+  enabled: false
   email_address: 'hello@jekyllthemes.io'
   form_action: 'https://formspree.io/hello@jekyllthemes.io'
   confirmation_url: '/thanks'
