--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-site: Made Jekyll Theme
+site: scottrobbins.dev
 
 collections:
   pages:
@@ -47,7 +47,7 @@ kramdown:
     block:
       line_numbers: true
       start_line: 1
-  
+
 sass:
   style: compressed
 
