--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,6 +8,8 @@ header_settings:
 
 menu_settings:
   menu_items:
+    - title: 'Projects'
+      url: '/'
     - title: 'Blog'
       url: '/blog'
 
