--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -33,33 +33,34 @@ contact_settings:
   send_button_text: 'Get in Touch'
 
 social_settings:
-  facebook_url: ''
-  twitter_url: 'https://twitter.com/scottrobbinsdev'
   twitter_tag: '@scottrobbinsdev'
-  instagram_url: ''
-  snapchat_url: ''
-  youtube_url: ''
-  google-plus_url: ''
-  vimeo_url: ''
-  pinterest_url: ''
-  medium_url: ''
-  quora_url: ''
-  amazon_url: ''
-  apple_url: ''
-  android_url: ''
-  tumblr_url: ''
-  dribbble_url: ''
-  behance_url: ''
-  deviantart_url: ''
-  github_url: 'https://github.com/ScottRobbins'
-  reddit_url: ''
-  flickr_url: ''
-  etsy_url: ''
-  kickstarter_url: ''
-  soundcloud_url: ''
-  spotify_url: ''
-  bandcamp_url: ''
-  linkedin_url: ''
+  social_urls:
+    facebook_url: ''
+    twitter_url: 'https://twitter.com/scottrobbinsdev'
+    instagram_url: ''
+    snapchat_url: ''
+    youtube_url: ''
+    google-plus_url: ''
+    vimeo_url: ''
+    pinterest_url: ''
+    medium_url: ''
+    quora_url: ''
+    amazon_url: ''
+    apple_url: ''
+    android_url: ''
+    tumblr_url: ''
+    dribbble_url: ''
+    behance_url: ''
+    deviantart_url: ''
+    github_url: 'https://github.com/ScottRobbins'
+    reddit_url: ''
+    flickr_url: ''
+    etsy_url: ''
+    kickstarter_url: ''
+    soundcloud_url: ''
+    spotify_url: ''
+    bandcamp_url: ''
+    linkedin_url: ''
 
 color_settings:
   background_color: '#ffffff'
